
- When the cursor was at a start (or end) of non-top (non-bottom) line,
  Find Next (Previous) for a non-empty regex starting with "^" (ending
  with "$") wrongly skipped the occurrence at the cursor.
  (SF.net bug #2953604 - Kazutoshi Satoda)

- Corrected a wrong specifications (javadoc comments) of
  SearchMatcher#nextMatch(). (SF.net bug #2953604 - Kazutoshi Satoda)

}}}
{{{ API Changes

- New method TextArea.getVisibleLineText(screenLine) and
  TextArea.getVisibleLineSegment() that returns
  the visible part of the given line (Matthieu Casanova)

- API made public:
  org.gjt.sp.jedit.browser.VFSFileNameField (Marcelo Vanzin)

- API made private:
  FileVFS.modified
  (Matthieu Casanova)

- Removed Deprecated apis :
  EditPlugin.createMenuItems(Vector menuItems)
  EditPlugin.createOptionPanes(OptionsDialog optionsDialog)
  HistoryModel.clear()
  JEditTextArea.getSelectionStart()
  JEditTextArea.getSelectionStart(int line)
  JEditTextArea.getSelectionStartLine()
  JEditTextArea.setSelectionStart(int selectionStart)
  JEditTextArea.getSelectionEnd()
  JEditTextArea.getSelectionEnd(int line)
  JEditTextArea.getSelectionEndLine()
  JEditTextArea.setSelectionEnd(int selectionEnd)
  JEditTextArea.select(int start, int end)
  JEditTextArea.select(int start, int end, boolean doElectricScroll)
  JEditTextArea.isSelectionRectangular()
  TextAreaPainter.setAntiAliasEnabled(boolean isEnabled)
  TextAreaPainter.isAntiAliasEnabled()
  FoldHandler.SERVICE
  Buffer.addBufferChangeListener(BufferChangeListener listener, int priority)
  Buffer.putProperty(Object name, Object value)
  Buffer.putBooleanProperty(String name, boolean value)
  Buffer.markTokens(int lineIndex)
  Buffer.TokenList
  Buffer.getMarkersPath(VFS vfs)
  Buffer.insertString(int offset, String str, AttributeSet attr)
  Buffer.editSyntaxStyle(JEditTextArea textArea)
  Buffer.addBufferChangeListener(BufferChangeListener listener)
  Buffer.removeBufferChangeListener(BufferChangeListener listener)